fix(toast): Allow visibility over modals

--- a/addon/styles/_flash-messages.scss
+++ b/addon/styles/_flash-messages.scss
@@ -10,5 +10,5 @@
 
 .ui.toast-container {
   position: fixed;
-  z-index: 50;
+  z-index: 5000;
 }
